.ins/backup/moove-logstash/templates/sts.yaml
---
# Source: logstash/templates/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moove-logstash
  namespace: "default"
  labels:
    app.kubernetes.io/instance: moove
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logstash
    app.kubernetes.io/version: 8.15.0
    helm.sh/chart: logstash-6.3.2
spec:
  serviceName: moove-logstash-headless
  replicas: 1
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: moove
      app.kubernetes.io/name: logstash
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: moove
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: logstash
        app.kubernetes.io/version: 8.15.0
        helm.sh/chart: logstash-6.3.2
      annotations:
        checksum/configuration: a0e180b4b2e6096fd06b6f2629e01e94262d9feb68b734a903bfd054d6ce3f3c
    spec:
      
      serviceAccountName: moove-logstash
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: moove
                    app.kubernetes.io/name: logstash
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: logstash
          image: docker.io/bitnami/logstash:8.15.0-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - name: monitoring
              containerPort: 9600
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: monitoring
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: monitoring
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/logstash/config
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/logstash/pipeline
              subPath: app-pipeline-dir
            - name: data
              mountPath: /bitnami/logstash/data
            - name: configurations
              mountPath: /bitnami/logstash/config
            
            - name: varlogcontainers
              mountPath: /var/log/containers
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: configurations
          configMap:
            name: moove-logstash
        - name: data
          emptyDir: {}
        
        - name: varlogcontainers
          hostPath:
            path: /var/log/containers
